// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Allergy: Represents any allergies to certain additives.
Branding: Represents a cannabis brand.
OutletStore: Represents an outlet store location.
Preference: Stores user-specific preferences regarding cannabis.
User: Represents a user in the cannabis safety application.
Pricing: Stores pricing information for different users and outlet stores.
SourceOfPlant: Represents different sources of cannabis plants.
ThcPercentage: Represents allowed THC percentages.
UserAllergy: Link table to associate users with allergies.
UserBranding: Link table to associate users with their preferred branding.
UserSourceOfPlant: Link table to associate users with their preferred source of cannabis plants.
UserThcPercentage: Link table to associate users with their preferred THC percentage.
'''
}

Table Allergy {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table Branding {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table OutletStore {
    id INTEGER [primary key]
    name VARCHAR 
    location VARCHAR 
    }

Table Preference {
    id INTEGER [primary key]
    user_id INTEGER 
    source_of_plant VARCHAR 
    percentage_of_thc FLOAT 
    preferred_branding VARCHAR 
    }

Table User {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    }

Table Pricing {
    id INTEGER [primary key]
    user_id INTEGER 
    outlet_store_id INTEGER 
    price FLOAT 
    }

Table SourceOfPlant {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table ThcPercentage {
    id INTEGER [primary key]
    value FLOAT 
    }

Table UserAllergy {
    id INTEGER [primary key]
    user_id INTEGER 
    allergy_id INTEGER 
    }

Table UserBranding {
    id INTEGER [primary key]
    user_id INTEGER 
    branding_id INTEGER 
    }

Table UserSourceOfPlant {
    id INTEGER [primary key]
    user_id INTEGER 
    source_of_plant_id INTEGER 
    }

Table UserThcPercentage {
    id INTEGER [primary key]
    user_id INTEGER 
    thc_percentage_id INTEGER 
    }



// Relationships
    Ref: Preference.(user_id) < User.(id)
    Ref: Pricing.(outlet_store_id) < OutletStore.(id)
    Ref: Pricing.(user_id) < User.(id)
    Ref: UserAllergy.(allergy_id) < Allergy.(id)
    Ref: UserAllergy.(user_id) < User.(id)
    Ref: UserBranding.(branding_id) < Branding.(id)
    Ref: UserBranding.(user_id) < User.(id)
    Ref: UserSourceOfPlant.(source_of_plant_id) < SourceOfPlant.(id)
    Ref: UserSourceOfPlant.(user_id) < User.(id)
    Ref: UserThcPercentage.(thc_percentage_id) < ThcPercentage.(id)
    Ref: UserThcPercentage.(user_id) < User.(id)
